data/all_generated_tests/raw_wast_tests/br_table_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2558.wast
;; **Test 7: br_table with forward branching to mismatched label arity in multi-module setup** - Module A’s function includes forward `br_table` branches facing operand type mismatches. - Module B imports and incorporates. Test looks at `wizard_engine` halting for `BrTableArityMismatch` compared to smooth execution in WebAssembly.

(assert_invalid
  (module
    (func $moduleA_func
      (i32.const 0) 
      (block (result i32)
        (br_table 0 2 (i32.const 1))))
    (export "moduleA_func" (func $moduleA_func))
  )
  "type mismatch"
)